; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavformat/extr_asfenc.c_put_str16.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavformat/extr_asfenc.c_put_str16.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*)* @put_str16 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @put_str16(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %8 = call i64 @avio_open_dyn_buf(i32** %7)
  %9 = icmp slt i64 %8, 0
  br i1 %9, label %10, label %11

10:                                               ; preds = %2
  br label %25

11:                                               ; preds = %2
  %12 = load i32*, i32** %7, align 8
  %13 = load i8*, i8** %4, align 8
  %14 = call i32 @avio_put_str16le(i32* %12, i8* %13)
  %15 = load i32*, i32** %7, align 8
  %16 = call i32 @avio_close_dyn_buf(i32* %15, i32** %6)
  store i32 %16, i32* %5, align 4
  %17 = load i32*, i32** %3, align 8
  %18 = load i32, i32* %5, align 4
  %19 = call i32 @avio_wl16(i32* %17, i32 %18)
  %20 = load i32*, i32** %3, align 8
  %21 = load i32*, i32** %6, align 8
  %22 = load i32, i32* %5, align 4
  %23 = call i32 @avio_write(i32* %20, i32* %21, i32 %22)
  %24 = call i32 @av_freep(i32** %6)
  br label %25

25:                                               ; preds = %11, %10
  ret void
}

declare dso_local i64 @avio_open_dyn_buf(i32**) #1

declare dso_local i32 @avio_put_str16le(i32*, i8*) #1

declare dso_local i32 @avio_close_dyn_buf(i32*, i32**) #1

declare dso_local i32 @avio_wl16(i32*, i32) #1

declare dso_local i32 @avio_write(i32*, i32*, i32) #1

declare dso_local i32 @av_freep(i32**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
